--- a/task_django_views3/viewsapp/templates/viewsapp/product.html
+++ b/task_django_views3/viewsapp/templates/viewsapp/product.html
@@ -1,4 +1,4 @@
-{% extends 'sem3app/index_sem3app.html' %}
+{% extends 'viewsapp/index_viewsapp.html' %}
 {% block title %} {{ Клиент }} {% endblock %}
 
 {% block client %} {{ Клиент }}  {% endblock %}
